# CameraModule

./: .gitignore  CMakeLists.txt  CalibratorWindow.cpp  CalibratorWindow.hpp  ErrorDetector.cpp  ErrorDetector.hpp  LineFunction.cpp  LineFunction.hpp  SendUART.c  calibrator.cpp  captureImage  captureImage.cpp  config-0.txt  config.txt  runVideo  runVideo.cpp
